ext/dashboard_v4.log
  File "/home/aimeat/github/anvilos_beta/system/dashboard.py", line 173
    net_mon.update()
    ^
IndentationError: expected an indented block after function definition on line 172
